# arthur-engine

./: .bumpversion.cfg  .gitattributes  .gitignore  .lts-source-version  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  VAGRANT_README.md  Vagrantfile  renovate.json  version
arthur-observability-sdk/python/: pyproject.toml
arthur-observability-sdk/python/tests/: conftest.py  test_client.py  test_context_helpers.py  test_install.py  test_prompt_management.py  test_telemetry.py  test_validation.py
deployment/ecs/model-upload/: .gitignore  Dockerfile  README.md  check_model_updates.py  download_models.py  models-manifest.json  pyproject.toml  task-definition.json  upload_models.py
deployment/gcp/model-upload/: .gitignore  Dockerfile  README.md  cloud-run-job.yaml  docker-compose.local.yml  download_models.py  pyproject.toml  upload_models.py
deployment/k8s/model-upload-oc/: .gitignore  01-pvc.yaml  02-serviceaccount.yaml  04-job.yaml  06-copy-config-job.yaml  Dockerfile  README.md  copy_models.py  docker-compose.local.yml  download_models.py  gliner_tokenizer_config.json  pyproject.toml
deployment/model-upload/: .gitignore  Dockerfile  README.md  check_model_updates.py  download_models.py  models-manifest.json  pyproject.toml  upload_models.py
deployment/model-upload/ecs/: task-definition.json
deployment/model-upload/gcp/: cloud-run-job.yaml  docker-compose.local.yml
deployment/model-upload/helm/: Chart.yaml  values.yaml.template
deployment/model-upload/k8s/: 01-pvc.yaml  02-serviceaccount.yaml  04-job.yaml  06-copy-config-job.yaml  docker-compose.local.yml
genai-engine/: .env  .gitignore  CLAUDE.md  Dockerfile_changelog  README.md  alembic.ini  changelog.py  changelog_cop.sh  docker-compose.yml  dockerfile  pyproject.toml  routes_security_check.py  staging.openapi.json  version
genai-engine/alembic/: README.md  env.py
genai-engine/alembic/versions/: 2023_06_23_1135-e04161e97672_start_db_with_v2_models.py  2023_06_27_0904-bf46ba93762f_add_new_database_tables_for_prompt_and_.py  2023_06_30_0736-f39011d0e6df_add_task_id_conversation_id_to_models.py  2023_07_13_0926-ae36d2222a3f_add_documents_table.py  2024_08_07_0941-46d1663a0358_migrate_.py  (+149 more)
genai-engine/cloudformation/: README.md  arthur-core-secrets-manager.yml  arthur-core-security-groups.yml  arthur-core-vpc.yml  arthur-genai-engine-cloudwatch-alarms.yml  arthur-genai-engine-ecs-task-definition-gpu.yml  arthur-genai-engine-ecs-task-definition.yml  arthur-genai-engine-lb.yml  arthur-genai-engine-security-groups.yml  arthur-ml-engine-cloudwatch-alarms.yml  arthur-ml-engine-cloudwatch-dashboard.yml  arthur-ml-engine-ecs-task-definition.yml  arthur-ml-engine-ecs.yml  arthur-ml-engine-iam.yml  arthur-ml-engine-secrets-manager.yml  arthur-ml-engine-security-groups.yml  root-arthur-engine-cpu-2.1.23-test.yml  root-arthur-engine-cpu.yml  root-arthur-engine-gpu-2.1.23-test.yml  root-arthur-engine-gpu.yml  root-arthur-genai-engine-cpu.yml  root-arthur-genai-engine-gpu.yml  root-arthur-ml-engine.yml  start-cpu.html  start-gpu.html
genai-engine/deploy/: cloudformation.html  helm.md
genai-engine/docker-compose/: .env.template  .gitignore  README.md  arthur-genai-engine.env.template  db.env.template  docker-compose.yml  start.sh
genai-engine/docs/: Image_Eval_Design.md  MULTI_TENANCY_DESIGN.md  PLATFORM_CONNECTED_MULTI_TENANCY_PLAN.md  audit-logging.md  model-inference-service-extraction.md
genai-engine/examples/: .gitignore  validate-prompt.py.template  validate-prompt.sh.template  validate-response.py.template  validate-response.sh.template
genai-engine/genai_engine/: api_changelog.md  dependencies.py  docker-entrypoint.sh  gunicorn.conf.py  rules_engine.py  server.py
genai-engine/helm/: .gitignore  Chart.yaml  README.md  start.sh.template  start.sh.template.cpu  start.sh.template.gpu  values.schema.json  values.yaml  values.yaml.template
genai-engine/locust/: .env  .gitignore  README.md  assemble.sh  locustfile.py  requirements.txt
genai-engine/models-service/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
genai-engine/scripts/: generate_changelog.sh  generate_migration.sh  run_linter.sh  start_local_server.sh  test_currency_conversion_standalone.py
genai-engine/src/: api_changelog.md  dependencies.py  docker-entrypoint.sh  gunicorn.conf.py  metrics_engine.py  rules_engine.py  server.py
genai-engine/technical_documentation/: comprehensive-filters-tdd.md  gcs_image_support_tdd.md  llm_evals_tdd.md  span_query_endpoint_scope_doc.md  targeted_api_endpoints_tdd.md  trace-query-filters-tdd.md
genai-engine/tests/: TEST_UPDATES_SUMMARY.md  __init__.py  conftest.py  constants.py  pytest.ini  test_remote.sh
genai-engine/ui/: .cursorrules  .env.dev  .env.local  .env.local.example  .gitignore  .prettierignore  .prettierrc  .yarnrc.yml  AGENTS.md  API_CLIENT_README.md  AUTHENTICATION.md  CLAUDE.md  README.md  ROUTES.md  eslint.config.js  index.html  package-lock.json  package.json  staging.openapi.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
genai-engine/ui-react/: .env.dev  index.html  package-lock.json  package.json  vite.config.ts
mcp-server/: README.md  arthur_admin_mcp.py  arthur_engine_mcp.py  env.example  pyproject.toml  setup-cursor.sh
ml-engine/: .gitignore  CLAUDE.md  Dockerfile  README.md  install_db_dependencies.sh  install_db_dependencies_docker.sh  ml-engine-agentic-filters-tdd.md  pyproject.toml  run_script.sh  test_inferences.json
ml-engine/docker-compose/: .env  .gitignore  README.md  docker-compose.yaml  ml-engine.env.template
ml-engine/helm/: Chart.yaml  README.md  application-secret-example.yaml  docker-secrets-example.yaml  values.schema.json  values.yaml  values.yaml.template
ml-engine/scripts/: install_db_dependencies.sh  install_local_scope_packages.sh  lint.sh  openapi_client_utils.sh  openapitools.json  run_linter.sh  staging.openapi.json  staging.openapi.min.json
model-upload/: .gitignore  Dockerfile  README.md  build.sh  models-manifest.json  pyproject.toml  upload_models.py
(+3022 files in other folders)
