[tool.poetry]
name = "ml-engine"
version = "2.1.65"
description = ""
authors = ["Arthur <engineering@arthur.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.*"
croniter = "6.0.0"
cx-oracle = "8.3.0"
flask = "3.1.1"
gcsfs = "2025.7.0"
google-cloud-bigquery = "3.35.1"
pandas = "2.3.1"
psycopg = {extras = ["binary"], version = "3.2.9"}
pymysql = "1.1.1"
pyodbc = "5.2.0"
pyyaml = "6.0.2"
requests = "2.32.4"
s3fs = "2025.7.0"
simple-settings = "1.2.0"
httpx = "0.28.1"
duckdb = "1.3.2"
fsspec = "2025.7.0"
datasketches = "5.2.0"
numpy = "2.3.2"
types-croniter = "6.0.0.20250626"
types-psutil = "7.0.0.20250601"
types-requests = "2.32.4.20250611"
psutil = "7.0.0"
pyarrow = ">=18.1.0"
arthur-client = "1.4.1267"
arthur-common = "2.1.59"
gunicorn = "^23.0.0"
sqlalchemy = "2.0.41"


[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
responses = "0.25.8"
pytest-httpserver = "1.1.3"
pytest-asyncio = "1.0.0"
pytest-httpx = "0.35.0"
pre-commit = "^4.0.0"
types-pytz = "^2025.2.0.20250516"

[tool.poetry.group.linters]
optional = true

[tool.poetry.group.linters.dependencies]
mypy = "^1.16.1"
isort = "^6.0.1"
autoflake = "^2.3.1"
black = "^25.1.0"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
implicit_reexport = true
explicit_package_bases = false
exclude = ["src/genai_client"]

[tool.pytest.ini_options]
pythonpath = ["src", "src/genai_client"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pkgname" = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "src.__version__.__version__"}
