[tool.poetry]
name = "ml-engine"
version = "2.1.174"
description = ""
authors = ["Arthur <engineering@arthur.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.*"
croniter = "6.0.0"
cx-oracle = "8.3.0"
flask = "3.1.2"
gcsfs = "2025.9.0"
google-cloud-bigquery = "3.36.0"
pandas = "2.3.3"
psycopg = {extras = ["binary"], version = "3.2.12"}
pymysql = "1.1.2"
pyodbc = "5.2.0"
pyyaml = "6.0.3"
requests = "2.32.5"
s3fs = "2025.9.0"
simple-settings = "1.2.0"
httpx = "0.28.1"
duckdb = "1.3.2"
fsspec = "2025.9.0"
datasketches = "5.2.0"
numpy = "2.3.2"
types-croniter = "6.0.0.20250809"
types-psutil = "7.0.0.20251001"
types-requests = "2.32.4.20250913"
psutil = "7.0.0"
pyarrow = "21.0.0"
arthur-client = "1.4.1589"
arthur-common = "2.4.7"
gunicorn = "^23.0.0"
sqlalchemy = "2.0.44"
snowflake-sqlalchemy = "1.7.7"


[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
responses = "0.25.8"
pytest-httpserver = "1.1.3"
pytest-asyncio = "1.2.0"
pytest-httpx = "0.35.0"
pre-commit = "4.3.0"
types-pytz = "^2025.2.0.20250516"
lazy-imports = "1.0.1"

[tool.poetry.group.linters]
optional = true

[tool.poetry.group.linters.dependencies]
mypy = "^1.16.1"
isort = "^6.0.1"
autoflake = "^2.3.1"
black = "25.9.0"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
implicit_reexport = true
explicit_package_bases = true
mypy_path = "src/ml_engine"
namespace_packages = true
exclude = ["src/genai_client"]

[tool.isort]
profile = "black"
src_paths = ["src/ml_engine", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src", "src/genai_client"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pkgname" = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "src.__version__.__version__"}
