[project]
name = "arthur-models-service"
version = "0.1.0"
description = "Sideloaded torch/transformers inference for genai-engine scorer checks"
authors = [{ name = "Arthur", email = "engineering@arthur.ai" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
  # HTTP server
  "fastapi==0.128.0",
  "uvicorn==0.35.0",
  "pydantic==2.12.5",
  "starlette==0.49.1",
  "python-dotenv==1.0.1",

  # ML — pinned to match genai-engine for behavioral parity
  "torch==2.9.1 ; sys_platform == 'darwin'",
  "torch==2.9.1+cpu ; sys_platform == 'linux' or sys_platform == 'win32'",
  "transformers==4.56.2",
  "sentence-transformers==5.1.2",
  "sentencepiece==0.2.1",
  "gliner==0.2.21",
  "numpy>=2.0.0",
  "more-itertools==10.8.0",

  # PII detection
  "presidio-analyzer==2.2.362",
  "presidio-anonymizer==2.2.362",
  "spacy>=3.8.3",
  "date-spacy>=0.0.1,<0.1",
  "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",

  # Model registry / weight downloader
  "huggingface-hub>=0.25,<1",

  # OpenTelemetry — same versions as genai-engine
  "opentelemetry-instrumentation-fastapi>=0.60b1,<0.61",
  "opentelemetry-instrumentation>=0.60b1,<0.61",
  "opentelemetry-exporter-otlp>=1.39.1,<2",
  "opentelemetry-semantic-conventions>=0.60b1,<0.61",
]

[project.scripts]
serve = "src.server:start"

[dependency-groups]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "pytest-cov==6.3.0",
  "httpx==0.28.1",  # for TestClient only
]
linters = [
  "black==25.12.0",
  "mypy>=1.13.0,<2",
  "isort>=7.0.0",
  "autoflake>=2.3.1,<3",
]

[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple"
priority = "primary"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
implicit_reexport = true
explicit_package_bases = true
mypy_path = "src"
namespace_packages = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv"
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
markers = [
  "unit_tests: mark a test as part of the unit tests suite",
]

[tool.black]
target-version = ['py312']

[tool.isort]
profile = "black"
