[tool.poetry]
name = "arthur-model-upload-gcp"
version = "1.0.0"
description = "Cloud Run job to upload ML models to GCS for airgapped environments"
authors = ["Arthur <engineering@arthur.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13.dev0"
google-cloud-storage = ">=2.10.0"
huggingface-hub = "^0.36.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.26.0"
black = "^24.0.0"
mypy = "^1.13.0"
isort = "^5.13.0"
autoflake = "^2.3.0"

[tool.poetry.scripts]
upload = "upload_models:main"
download = "download_models:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.black]
target-version = ['py312']
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv"
testpaths = ["tests"]
asyncio_mode = "auto"
